# asr_curation

./: .coverage  .gitignore  .tsv  404.html  BRENDA_README.md  README.md  __init__.py  domains.html  embeddings.pkl  environment.yml  funfam_general_summary_dataset_style.txt  funfam_general_summary_top_dataset_style.txt  funfam_specific_summary_dataset_style.txt  funfam_specific_summary_top_dataset_style.txt  index.html  info_dataset_style.txt  interpro_with_counts_dataset_style.txt  interpro_wo_counts_dataset_style.txt  kari_domain.html  lab_assays.txt  lab_sequence_dataset_style.txt  lineage_superkingdom_dataset_style.txt  mkdocs.yml  new.txt  orthodb_name_dataset_style.txt  orthodb_name_level_name_dataset_style.txt  output.csv  output.fasta  panther_mappings.txt  pyproject.toml  requirements.txt  requirements_new.txt  requirements_old.txt  requirements_with_versions.txt  secondary_struct.html  snakefile  tox.ini  xref_cdd_dataset_style.txt  xref_cdd_names.txt  xref_cdd_short_names.txt  (+9 more)
additional_data/: markdown_cheatsheet.md
asr_curation/: .coverage  common.py  requirements.txt  snakefile
basic_snakemake/: index.html
config/: example_config.yaml  example_config_with_outlier_analysis.yaml
customising_workflow/: index.html
defining_files/: index.html
detailed_explanation/: index.html
docs/: basic_snakemake.md  customising_annotations.md  customising_workflow.md  defining_files.md  detailed_explanation.md  example.md  index.md  install.md  output.md  tips_and_tricks.md  visualisation.md
example/: index.html
install/: index.html
output/: index.html
(+663 files in other folders)
